--- a/src/components/Cubes/CubesSummary.module.css
+++ b/src/components/Cubes/CubesSummary.module.css
@@ -6,7 +6,7 @@
   position: relative;
   background: url("../../assets/Weekly_Deals_New_Banner_29_June_2022_1300x.webp");
   background-size: cover;
-  color: white;
+  color: whitesmoke;
   border-radius: 14px;
   padding: 1rem;
   box-shadow: 0 1px 18px 10px rgba(0, 0, 0, 0.25);
@@ -19,4 +19,11 @@
 
 .pcolor{
   text-align: right;
+}
+
+@media screen and (max-width: 650px) {
+  .summary h2 {
+    font-size: 1.2rem;
+    margin-top: 0;
+  }
 }
