--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -1,21 +1,5 @@
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 5rem;
-  background-color: black;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 10%;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  z-index: 10;
-}
-
 .main-image {
-  margin: 85px auto 0;
+  margin: 75px auto 0;
   width: 97%;
   height: 25rem;
   z-index: 0;
@@ -69,4 +53,27 @@
 .main-image button:hover,
 .main-image button:active {
   background-color: black;
+}
+
+@media screen and (max-width: 767px) {
+  .main-image {
+    width: 100%;
+    height: 50vh;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .main-image h1 {
+    font-size: 2.5rem;
+    text-align: center;
+    padding-left: 0;
+  }
+
+  .main-image p {
+    padding-left: 0;
+  }
+
+  .main-image button {
+    margin: 0 auto;
+  }
 }
