--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -56,11 +56,20 @@
 }
 
 @media screen and (max-width: 767px) {
+  
+  
   .main-image {
     width: 100%;
     height: 50vh;
+    max-height: 350px;
     justify-content: flex-start;
     align-items: center;
+    background-image: linear-gradient(#22262a, whitesmoke);
+  }
+
+  .main-image img {
+    object-fit: contain;
+    object-position: bottom;
   }
 
   .main-image h1 {
@@ -71,9 +80,12 @@
 
   .main-image p {
     padding-left: 0;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
   }
 
   .main-image button {
     margin: 0 auto;
   }
+
 }
